policies/dx/EnforceGSRegistries.yaml
[[- if not .Values.cel.enabled ]]
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  annotations:
    policies.kyverno.io/title: Restrict Image Registries
    policies.kyverno.io/category: Developer Experience
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.3.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Images from unknown, public registries can be of dubious quality and may not be
      scanned and secured, representing a high degree of risk. Requiring use of known, approved
      registries helps reduce threat exposure by ensuring image pulls only come from them. This
      sample validates that container images only originate from Giant Swarm trusted registries.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: validate-registries
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: >-
        Images must come from a trusted Giant Swarm registry.
      pattern:
        spec:
          containers:
          - image: "quay.io/giantswarm/* | docker.io/giantswarm/* | giantswarm/* | giantswarm.azurecr.io/giantswarm/* | giantswarm-registry.cn-shanghai.cr.aliyuncs.com/giantswarm/* | gsoci.azurecr.io/giantswarm/* | gsociprivate.azurecr.io/giantswarm/*"
[[- end ]]
