policies/dx/RestartDexOnCredentialsRenewal.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restart-dex-on-secrets-change
  annotations:
    policies.kyverno.io/title: Restart Dex Components on Secrets Change
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: low
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/subject: Deployment, Secret
    policies.kyverno.io/description: >-
      This policy automatically triggers rolling restarts of dex components when their
      respective secrets are updated. The dex-operator deployment restarts when
      dex-operator-credentials changes (credential rotation). The dex deployment
      restarts when its configuration secret changes (after operator updates it).
spec:
  background: false
  schemaValidation: false
  rules:
    - name: restart-dex-operator-on-credentials-change
      match:
        any:
        - resources:
            kinds:
            - Secret
            names:
            - dex-operator-credentials
            namespaces:
            - giantswarm
            - org-*
            operations:
            - UPDATE
      preconditions:
        all:
        - key: "[[request.object.data]]"
          operator: NotEquals
          value: "[[request.oldObject.data]]"
      mutate:
        targets:
          - apiVersion: apps/v1
            kind: Deployment
            name: dex-operator
            namespace: "[[request.object.metadata.namespace]]"
        patchStrategicMerge:
          spec:
            template:
              metadata:
                annotations:
                  dex-operator.giantswarm.io/restarted-at: "[[time_now()]]"
                  dex-operator.giantswarm.io/credentials-version: "[[request.object.metadata.resourceVersion]]"
                  dex-operator.giantswarm.io/restart-reason: "credentials-rotation"

    - name: restart-dex-on-config-change
      match:
        any:
        - resources:
            kinds:
            - Secret
            names:
            - dex-app-default-dex-config
            namespaces:
            - giantswarm
            operations:
            - UPDATE
      preconditions:
        all:
        - key: "[[request.object.data]]"
          operator: NotEquals
          value: "[[request.oldObject.data]]"
      mutate:
        targets:
          - apiVersion: apps/v1
            kind: Deployment
            name: dex
            namespace: giantswarm
        patchStrategicMerge:
          spec:
            template:
              metadata:
                annotations:
                  dex-operator.giantswarm.io/restarted-at: "[[time_now()]]"
                  dex-operator.giantswarm.io/config-version: "[[request.object.metadata.resourceVersion]]"
                  dex-operator.giantswarm.io/restart-reason: "config-update"

    - name: restart-dex-on-wc-config-change
      match:
        any:
        - resources:
            kinds:
            - Secret
            names:
            - "*-default-dex-config"
            namespaces:
            - org-*
            operations:
            - UPDATE
      preconditions:
        all:
        - key: "[[request.object.data]]"
          operator: NotEquals
          value: "[[request.oldObject.data]]"
        - key: "[[request.object.metadata.labels.\"giantswarm.io/managed-by\" || '']]"
          operator: Equals
          value: "dex-operator"
      mutate:
        targets:
          - apiVersion: apps/v1
            kind: Deployment
            name: dex
            namespace: "[[request.object.metadata.namespace]]"
        patchStrategicMerge:
          spec:
            template:
              metadata:
                annotations:
                  dex-operator.giantswarm.io/restarted-at: "[[time_now()]]"
                  dex-operator.giantswarm.io/config-version: "[[request.object.metadata.resourceVersion]]"
                  dex-operator.giantswarm.io/restart-reason: "config-update"
