policies/dx/RestrictExternalSecretsServiceAccounts.yaml
[[- if not .Values.cel.enabled ]]
[[- if or (.Capabilities.APIVersions.Has "external-secrets.io/v1alpha1/SecretStore") (.Capabilities.APIVersions.Has "external-secrets.io/v1beta1/SecretStore") ]]
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-external-secrets-secret-store-service-accounts
  annotations:
    policies.kyverno.io/title: Restrict External Secrets Service Accounts
    policies.kyverno.io/category: Developer Experience
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.3.0
    policies.kyverno.io/subject: SecretStore
spec:
  background: true
  failurePolicy: Fail
  rules:
    - match:
        any:
          - resources:
              kinds:
                - SecretStore
      name: validate-service-account-namespace
      validate:
        message: SecretStore cannot use giantswarm namespaced service accounts for kubernetes provider.
        pattern:
          spec:
            =(provider):
              =(kubernetes):
                =(auth):
                  # This is for v1beta1
                  =(serviceAccount):
                    namespace: "!*giantswarm*"
                    # This is for v1alpha1
                    =(serviceAccount):
                      namespace: "!*giantswarm*"
  validationFailureAction: Enforce
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-external-secrets-cluster-secret-store-service-accounts
  annotations:
    policies.kyverno.io/title: Restrict External Secrets Cluster Secret Store Service Accounts
    policies.kyverno.io/category: Developer Experience
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.3.0
    policies.kyverno.io/subject: ClusterSecretStore
spec:
  background: true
  failurePolicy: Fail
  rules:
    - match:
        any:
          - resources:
              kinds:
                - ClusterSecretStore
      name: validate-service-account-namespace
      validate:
        message: ClusterSecretStore cannot use giantswarm namespaced service accounts for kubernetes provider.
        pattern:
          spec:
            =(provider):
              =(kubernetes):
                =(auth):
                  # This is for v1beta1
                  =(serviceAccount):
                    namespace: "!*giantswarm*"
                    # This is for v1alpha1
                    =(serviceAccount):
                      namespace: "!*giantswarm*"
  validationFailureAction: Enforce
